// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowButton should handle props 1`] = `
<div>
  <button
    aria-label="Назад"
    class="arrow-button size-l"
    data-testid="arrow-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11.707 4.707a1 1 0 0 0-1.414-1.414l-8 8a1 1 0 0 0 0 1.414l8 8a1 1 0 0 0 1.414-1.414L5.414 13H21a1 1 0 1 0 0-2H5.414l6.293-6.293Z"
      />
    </svg>
  </button>
</div>
`;

exports[`ArrowButton should renders correctly 1`] = `
<div>
  <button
    aria-label="Вперед"
    class="arrow-button size-l"
    data-testid="arrow-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12.664 3.253a1 1 0 0 0-1.328 1.494L18.37 11H3a1 1 0 1 0 0 2h15.37l-7.034 6.253a1 1 0 0 0 1.328 1.494l9-8a1 1 0 0 0 0-1.494l-9-8Z"
      />
    </svg>
  </button>
</div>
`;
